--- a/index.html
+++ b/index.html
@@ -1,151 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Gráficos de Perdas por Loja</title>
+    <meta charset="UTF-8">
+    <title>Gráficos de Perdas por Loja</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <style>
-    /* animação suave do modal */
-    .modal-enter {
-      opacity: 0;
-      transform: scale(0.9);
-    }
-    .modal-enter-active {
-      opacity: 1;
-      transform: scale(1);
-      transition: all 0.25s ease-out;
-    }
-    .modal-leave {
-      opacity: 1;
-      transform: scale(1);
-    }
-    .modal-leave-active {
-      opacity: 0;
-      transform: scale(0.9);
-      transition: all 0.25s ease-out;
-    }
-  </style>
-</head>
-<body class="bg-gray-100 text-gray-800 min-h-screen p-6">
-
-  <h1 class="text-3xl font-bold text-blue-600 mb-6">Gráfico Comparativo de Perdas (2024 vs 2025)</h1>
-
-  <!-- Pesquisa -->
-  <div class="flex gap-2 mb-6 items-center bg-white p-4 rounded shadow">
-    <label for="consulta-loja" class="font-semibold">Consultar loja:</label>
-    <input id="consulta-loja" type="text" placeholder="Ex: 09, loja 09, LOJA 9, Loja09"
-           class="flex-1 border rounded p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-    <button id="btn-consultar"
-            class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
-      Consultar
-    </button>
-  </div>
-
-  <!-- Gráfico Geral -->
-  <div class="bg-white p-4 rounded shadow mb-6">
-    <h2 class="text-xl font-semibold mb-4">Geral: Todas as Lojas</h2>
-    <canvas id="graficoGeral"></canvas>
-  </div>
-
-  <!-- Gráficos individuais -->
-  <div id="graficos-lojas" class="grid md:grid-cols-2 gap-6"></div>
-
-  <!-- Modal -->
-  <div id="modal-dados" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden z-50">
-    <div class="bg-white p-6 rounded-lg max-w-lg w-full relative">
-      <h3 id="modal-titulo" class="text-xl font-bold mb-4">Dados da Loja</h3>
-      <pre id="modal-json" class="bg-gray-100 p-4 rounded overflow-x-auto"></pre>
-      <button id="btn-fechar"
-              class="absolute top-2 right-2 text-gray-600 hover:text-gray-900 font-bold">
-        ✕
-      </button>
-    </div>
-  </div>
-
-  <!-- Script -->
-  <script>
-    // Dados fictícios
-    const dados = {
-      geral: {
-        labels: ['Jan','Fev','Mar','Abr','Mai','Jun'],
-        datasets: [
-          {label:'2024', data:[187,212,198,234,210,220], backgroundColor:'#3B82F6'},
-          {label:'2025', data:[200,220,210,250,230,240], backgroundColor:'#F97316'}
-        ]
-      },
-      lojas: {
-        '09': {labels:['Jan','Fev','Mar'], data2024:[187,212,198], data2025:[200,220,210]},
-        '11': {labels:['Jan','Fev','Mar'], data2024:[150,180,170], data2025:[160,190,180]}
-      }
-    };
-
-    // Gráfico Geral
-    const ctxGeral = document.getElementById('graficoGeral').getContext('2d');
-    const graficoGeral = new Chart(ctxGeral, {
-      type: 'bar',
-      data: dados.geral,
-      options: {
-        responsive:true,
-        plugins:{
-          legend:{position:'top'},
-          tooltip:{mode:'index', intersect:false}
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+            margin: 2rem;
+            color: #222;
         }
-      }
-    });
 
-    // Criar gráficos individuais
-    const container = document.getElementById('graficos-lojas');
-    Object.keys(dados.lojas).forEach(loja => {
-      const card = document.createElement('div');
-      card.className = "bg-white p-4 rounded shadow";
+        h1 {
+            color: #0066cc;
+        }
 
-      const titulo = document.createElement('h3');
-      titulo.className = "text-lg font-semibold mb-2 cursor-pointer hover:text-blue-600";
-      titulo.textContent = `Loja ${loja}`;
-      titulo.onclick = () => mostrarModal(loja);
+        .grafico-container {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            margin-bottom: 2rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
 
-      const canvas = document.createElement('canvas');
-      canvas.id = `grafico-loja-${loja}`;
-      card.appendChild(titulo);
-      card.appendChild(canvas);
-      container.appendChild(card);
+        canvas {
+            width: 100%;
+        }
 
-      new Chart(canvas.getContext('2d'), {
-        type: 'bar',
-        data: {
-          labels: dados.lojas[loja].labels,
-          datasets:[
-            {label:'2024', data:dados.lojas[loja].data2024, backgroundColor:'#3B82F6'},
-            {label:'2025', data:dados.lojas[loja].data2025, backgroundColor:'#F97316'}
-          ]
-        },
-        options: {responsive:true, plugins:{legend:{position:'top'}}}
-      });
-    });
+        /* pesquisa UI */
+        .consulta-container {
+            background: white;
+            padding: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            margin-bottom: 1rem;
+            display: flex;
+            gap: .5rem;
+            align-items: center;
+        }
 
-    // Modal
-    const modal = document.getElementById('modal-dados');
-    const modalJSON = document.getElementById('modal-json');
-    document.getElementById('btn-fechar').onclick = ()=> modal.classList.add('hidden');
+        .consulta-container input[type="text"] {
+            flex: 1;
+            padding: .5rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-    function mostrarModal(loja){
-      modalJSON.textContent = JSON.stringify(dados.lojas[loja], null, 2);
-      modal.classList.remove('hidden');
-    }
+        .consulta-container button {
+            padding: .5rem 1rem;
+            border: none;
+            background: #0066cc;
+            color: white;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-    // Pesquisa loja
-    document.getElementById('btn-consultar').onclick = ()=>{
-      const input = document.getElementById('consulta-loja').value.toLowerCase().replace(/\D/g,'');
-      if(dados.lojas[input]) mostrarModal(input);
-      else alert('Loja não encontrada');
-    }
-  </script>
+        /* modal simples */
+        .modal {
+            position: fixed;
+            inset: 0;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            background: rgba(0,0,0,0.4);
+            z-index: 9999;
+        }
 
+        .modal.open { display: flex; }
+
+        .modal-box {
+            background: white;
+            width: 90%;
+            max-width: 800px;
+            max-height: 80%;
+            overflow: auto;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 6px 30px rgba(0,0,0,0.2);
+        }
+
+        .modal-box pre {
+            white-space: pre-wrap;
+            word-break: break-word;
+            background: #f7f7f7;
+            padding: .5rem;
+            border-radius: 4px;
+            border: 1px solid #eee;
+        }
+
+        .modal-actions {
+            margin-top: .5rem;
+            text-align: right;
+        }
+
+        .modal-actions button {
+            padding: .4rem .8rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .btn-close { background: #777; color: white; }
+    </style>
+</head>
+
+<body>
+
+    <h1>Gráfico Comparativo de Perdas (2024 vs 2025)</h1>
+
+    <!-- pesquisa por loja -->
+    <div class="consulta-container">
+        <label for="consulta-loja" style="white-space:nowrap;">Consultar loja:</label>
+        <input id="consulta-loja" type="text" placeholder="Ex: 09, loja 09, LOJA 9, Loja09">
+        <button id="btn-consultar">Consultar</button>
+    </div>
+
+    <!-- Gráfico geral -->
+    <div class="grafico-container">
+        <h2>Geral: Todas as Lojas</h2>
+        <canvas id="graficoGeral" width="900" height="400"></canvas>
+    </div>
+
+    <!-- Aqui entrarão os gráficos individuais -->
+    <div id="graficos-lojas"></div>
+
+    <!-- modal de exibição dos dados da loja -->
+    <div id="modal-dados" class="modal" role="dialog" aria-hidden="true">
+        <div class="modal-box" role="document">
+            <h3 id="modal-titulo">Dados da Loja</h3>
+            <div id="modal-conteudo">
+                <pre id="modal-json">Carregando...</pre>
+            </div>
+            <div class="modal-actions">
+                <button class="btn-close" id="btn-fechar">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
